--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "build": "ncc build app.js -o dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +13,8 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.36.1"
   }
 }
