--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "ncc build app.js -o dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build app.js -o dist"
   },
   "author": "",
   "license": "ISC",
